# 4610_HW1b

./: .gitignore  CMakeLists.txt  README.md
src/: 2d_s_gasket.cpp  recursive_subdivison_s_gas.cpp  recursive_subdivison_tet_s_gas.cpp
